# handwritten

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
src/: test.py
src/handwritten/: __main__.py  app.py
