[tool.briefcase]
project_name = "Handwritten"
bundle = "io.bryton"
version = "0.0.1"
url = "https://github.com/hall/handwritten"
license = "GNU General Public License v3 (GPLv3)"
# author = 'Jane Developer'
# author_email = "jane@example.com"

[tool.briefcase.app.handwritten]
formal_name = "Handwritten"
description = "Handwritten input"
icon = "src/handwritten/resources/handwritten"
sources = ['src/handwritten']
requires = [
    'easyocr',
    'numpy==1.23.3',
    'scikit-image',
    'pynput'
]


[tool.briefcase.app.handwritten.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev34',
    'std-nslog~=1.0.0'
]

[tool.briefcase.app.handwritten.linux]
requires = [
    'toga-gtk>=0.3.0.dev39',
    'toga-core>=0.3.0.dev39',
]

[tool.briefcase.app.handwritten.linux.appimage]
system_requires = [
    'gir1.2-webkit-3.0',
    'libcairo2-dev',
    'libgirepository1.0-dev',
    'libgtk-3-dev',
    'libpango1.0-dev',
    'librsvg2-dev',
    'libwebkitgtk-3.0-0',
]
linuxdeploy_plugins = [
    'DEPLOY_GTK_VERSION=3 gtk',
]

[tool.briefcase.app.handwritten.linux.flatpak]
flatpak_runtime = 'org.gnome.Platform'
flatpak_runtime_version = '42'
flatpak_sdk = 'org.gnome.Sdk'

[tool.briefcase.app.handwritten.windows]
requires = [
    'toga-winforms>=0.3.0.dev34',
]

# Mobile deployments
[tool.briefcase.app.handwritten.iOS]
requires = [
    'toga-iOS>=0.3.0.dev34',
    'std-nslog~=1.0.0'
]

[tool.briefcase.app.handwritten.android]
requires = [
    'toga-android>=0.3.0.dev34'
]

[tool.briefcase.app.handwritten.web]
requires = [
    # Workaround; toga-web 0.3.0.dev38 doesn't include toga-core as a dependency.
    "toga-core>=0.3.0.dev38",
    "toga-web>=0.3.0.dev38",
]
style_framework = "Bootstrap v4.6"

[build-system]
requires = ["briefcase>=0.3.0"]
# build-backend = "poetry.core.masonry.api"
